# ComfyUI-GmanNodes

./: README.md  ROADMAP.md  __init__.py  pyproject.toml
example_workflows/: Auto Movie Director.json
example_workflows/archive/: Auto Movie Director v0.3.5.json  Auto Movie Director v0.4.0.json
js/: amd_scene_editor.js
