[project]
name = "comfyui-gmannodes"
description = "GmanNodes — Auto Movie Director: type a movie idea, get a finished short film. Ollama writes the script, LTX 2.3 renders every scene with audio, storyboard approval in between, auto-stitched MP4 out."
version = "0.5.9"
license = { text = "MIT" }
authors = [{ name = "AdamGman" }]
dependencies = ["imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/AdamGman/ComfyUI-GmanNodes"

[tool.comfy]
PublisherId = "adamgman"
DisplayName = "GmanNodes (Auto Movie Director)"
Icon = "🎬"
